fixed: letter spacing and caps issue

--- a/app/mdw-css/sponsor-jeu-concours-style.css
+++ b/app/mdw-css/sponsor-jeu-concours-style.css
@@ -310,6 +310,7 @@ h1.huge,
 h1.small,
 .h1.small {
   font-size:60px;
+  letter-spacing: 1px;
 }
 
 h1.micro,
